# CNN_Classifier

./: .gitignore  LICENSE  README.md  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
configs/: config.yaml
research/: stage1.ipynb  stage2.ipynb  stage3.ipynb  stage4.ipynb  stage5.ipynb  trials.ipynb
src/deepclassifier/: __init__.py
src/deepclassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepclassifier/config/: __init__.py  configuration.py
src/deepclassifier/constants/: __init__.py
src/deepclassifier/entity/: __init__.py  config_entity.py
src/deepclassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/deepclassifier/utils/: __init__.py  common.py
tests/integration/: test_int.py
tests/unit/: test_utils.py
