[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7          

[options.extras_require]
testing =
    pytest>=7.1.3           # For unit test and integration test
    mypy>=0.971             #checking for typing error
    flake8>=5.0.4           #see if any mistakes like say, extra spaces
    tox>=3.25.1             #creating different working environments to test it locally
    black>=22.8.0           #for formatting applications to standard python

[options.package_data]
deepClassifier = py.typed       #ignore errors in the packages being imported like say, tensorflow. We don't want to check errors in imported packages

[flake8]                        
#max-line-length = 160           #if char length more than 160 in a line, this will be checked. Ignoring for now since writing comments
exclude = __init__.py           #exclude these files to be checked